# ozon-sdk

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
ozon_api_sdk/: __init__.py  base.py  constants.py  endpoints.py  exceptions.py  performance.py  seller.py  types.py
ozon_api_sdk/performance/: __init__.py  campaigns.py  client.py
ozon_api_sdk/seller/: __init__.py  analytics.py  client.py  finance.py  products.py  promotion.py
tests/: conftest.py
tests/integration/: test_analytics.py  test_campaigns.py  test_finance.py  test_products.py  test_promotion.py
