[project]
name = "ozon-api-sdk"
version = "0.1.0"
description = "Python SDK for Ozon Seller API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ozon_api_sdk"]
