[project]
name = "ozon-api-sdk"
version = "0.1.1"
description = "Python SDK for Ozon Seller API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ozon_api_sdk"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: real API calls (need credentials)"]
