[project]
name = "ozon-api-sdk"
version = "0.1.5"
description = "Python SDK for Ozon Seller API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "orjson>=3.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ozon_api_sdk"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: real API calls (need credentials)",
    "seller: Seller API tests (need OZON_SELLER_CLIENT_ID and OZON_SELLER_API_KEY)",
    "performance: Performance API tests (need OZON_PERF_CLIENT_ID and OZON_PERF_CLIENT_SECRET)",
]
